src/ui/sonarr_ui/indexers/snapshots/managarr__ui__sonarr_ui__indexers__indexers_ui_tests__tests__snapshot_tests__indexers_ui_renders_edit_usenet_indexer_over_indexers.snap
---
source: src/ui/sonarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Indexer                              RSS                   Automatic Search      Interactive Search    Priority              Tags                                 
=> Test Indexer                         Enabled               Enabled               Enabled               25                    alex                                 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                         ╭────────────────────────────────────────────────  Edit Indexer  ─────────────────────────────────────────────────╮                         
                         │                                                                                                                 │                         
                         │                            ╭─────────────────────────╮                            ╭─────────────────────────╮   │                         
                         │                      Name: │DrunkenSlug              │                       URL: │http://127.0.0.1:9696/1/ │   │                         
                         │                            ╰─────────────────────────╯                            ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │                Enable RSS: │ ✔ │                                         API Key: │someApiKey               │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │   Enable Automatic Search: │ ✔ │                                            Tags: │25                       │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                            ╭───╮                                                  ╭─────────────────────────╮   │                         
                         │ Enable Interactive Search: │ ✔ │                             Indexer Priority ▴▾: │1                        │   │                         
                         │                            ╰───╯                                                  ╰─────────────────────────╯   │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                                                                                                                 │                         
                         │                            ╭───────────────────────────╮╭──────────────────────────╮                            │                         
                         │                            │           Save            ││          Cancel          │                            │                         
                         │                            ╰───────────────────────────╯╰──────────────────────────╯                            │                         
                         ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
