src/ui/sonarr_ui/indexers/snapshots/managarr__ui__sonarr_ui__indexers__indexers_ui_tests__tests__snapshot_tests__indexers_ui_renders_loading_test_results.snap
---
source: src/ui/sonarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                     
                                                                                                                                                                     
 Loading ...                                                                                                                                                         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                             ╭  Testing Indexer  ────────────────────╮                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │ Loading ...                           │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             │                                       │                                                               
                                                             ╰───────────────────────────────────────╯
